[tool.poetry]
name = "hmac_token"
version = "0.1.0"
description = ""
authors = ["jpburbank <jpburbank@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
